--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "actions-toolkit": "^2.2.0"
+    "@actions/core": "^1.2.2",
+    "actions-toolkit": "^2.2.0",
+    "jira-client": "^6.14.0"
   },
   "devDependencies": {
     "jest": "^24.5.0"
