--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jira-client": "^6.14.0"
   },
   "devDependencies": {
-    "jest": "^24.5.0"
+    "jest": "^24.5.0",
+    "nock": "^12.0.0"
   }
 }
