Add inputs to action.yml

--- a/action.yml
+++ b/action.yml
@@ -6,3 +6,14 @@ runs:
 branding:
   icon: mail
   color: orange
+inputs:
+  jiraHost:
+    description: "The URL of your Jira instance e.g. https://myapp.atlassian.net"
+  jiraUsername:
+    description: "The username to authenticate with"
+  jiraPassword:
+    description: "The password for the provided username"
+  project:
+    description: "The project key to create a new issue in"
+  assignee:
+    description: "The default assignee for any created issues"
